<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools"
    app:cardCornerRadius="15dp"
    app:cardElevation="10dp"
    app:cardUseCompatPadding="true"
    card_view:cardCornerRadius="5dp">

    <LinearLayout
        android:orientation="vertical"
        android:padding="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="horizontal"
                android:padding="1dp"
                android:gravity="center"
                android:layout_alignParentStart="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:padding="1dp"
                    android:src="@drawable/ic_person"
                    android:layout_width="35dp"
                    android:layout_height="35dp"/>

                <TextView
                    android:text="@string/location"
                    android:textSize="16sp"
                    android:layout_margin="5dp"
                    android:textStyle="bold|normal"
                    android:textColor="#F8554A4A"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

        </RelativeLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/latitudeInputContainer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:startIconDrawable="@drawable/ic_location"
                    app:startIconContentDescription="Latitude"
                    app:helperTextTextColor="@android:color/holo_red_dark"
                    android:layout_marginTop="30dp"
                    android:layout_marginBottom="30dp"
                    android:hint="@string/latitude"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/latitudeInput"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="numberSigned|numberDecimal"
                        />
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/longitudeInputContainer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:startIconDrawable="@drawable/ic_location"
                    app:startIconContentDescription="Longitude"
                    app:helperTextTextColor="@android:color/holo_red_dark"
                    android:layout_marginBottom="30dp"
                    android:hint="@string/longitude"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/longitudeInput"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="numberSigned|numberDecimal"
                        />
                </com.google.android.material.textfield.TextInputLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:orientation="horizontal"
                        android:padding="1dp"
                        android:gravity="center"
                        android:layout_alignParentStart="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <Button
                            android:id="@+id/cancelLocationButton"
                            android:layout_width="wrap_content"
                            android:layout_gravity="start"
                            android:layout_height="wrap_content"
                            android:text="@string/cancel"
                            style="?attr/materialButtonOutlinedStyle"
                            />

                    </LinearLayout>
                    <LinearLayout
                        android:orientation="horizontal"
                        android:padding="1dp"
                        android:gravity="center"
                        android:layout_alignParentEnd="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <Button
                            android:id="@+id/saveLocationButton"
                            android:layout_gravity="end"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/save"
                            />

                    </LinearLayout>

                </RelativeLayout>
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>